fixed features section

--- a/css/index.css
+++ b/css/index.css
@@ -422,7 +422,7 @@ img {
     flex-direction: column;
     align-items: center;
   }
-  .home .content-pick .destination {
+  .home .content-pick .feature {
     width: 90%;
   }
 }
