--- a/less/home-page.less
+++ b/less/home-page.less
@@ -149,7 +149,7 @@
     .content-pick {
       flex-direction: column;
       align-items: center;
-      .destination {
+      .feature {
         width: 90%;
         
       }
