--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,11 @@
     display: none;
   }
 
+  header {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -80,17 +85,7 @@
   }
 
   .line {
-    border-bottom:3px solid @forest-green;
-  }
-
-  .nav-line {
-    box-sizing: border-box;
-    width: 100vw;
-    border-top: 3px solid @forest-green;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-bottom: 1%;
+    border-bottom:2px solid @forest-green;
   }
 
   .where-you-park-it {
