--- a/css/index.css
+++ b/css/index.css
@@ -439,3 +439,31 @@ img {
     width: 90%;
   }
 }
+.about .role {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 500px) {
+  .about .role {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.about .role .dev {
+  width: 30%;
+  padding: 0 1rem;
+}
+@media screen and (max-width: 500px) {
+  .about .role .dev {
+    width: 90%;
+  }
+  .about .role .dev img {
+    width: 60%;
+    display: block;
+    margin: 0 auto;
+  }
+}
+.about .role .dev img {
+  border-radius: 10%;
+}
