--- a/less/navigation.less
+++ b/less/navigation.less
@@ -50,3 +50,13 @@
         }
     }
 }
+
+.nav-btn {
+      .button-mixin(auto, 160, 217, 118, 0.5, @feijoa, @nero, 1.5rem);
+}
+
+a.nav-btn:hover {
+    color: @feijoa;
+    background: @nero;
+}
+
