--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,16 @@
 .home {
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
   .stacked-logo {
     display: none;
+  }
+
+  @keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
   }
 
   header {
@@ -66,8 +76,13 @@
       justify-content: space-between;
       align-items: center;
 
-      .btn {
-        .button-mixin(70%, 160, 217, 118, 0.5, @feijoa, @white);
+      a.btn {
+        .button-mixin(70%, 160, 217, 118, 0.5, @feijoa, @white, 2rem);
+      }
+
+      a.btn:hover {
+        background: rgba(160, 217, 118, 0.8);
+        color: @nero;
       }
     }
   }
