--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,6 +4,7 @@
     text-align: center;
     background: @background;
     padding: 5%;
+    box-sizing: border-box;
     font-size: @font-size;
     border-radius:10px;
     background: rgba(@r, @g, @b, @opacity);
