--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,10 +3,7 @@
 
 .navigation {
     display: flex;
-    max-height: 100px;
-    div {
-        width: 50%;
-    }
+    //max-height: 100px;
 
     a {
         text-decoration: none;
@@ -17,6 +14,7 @@
     }
 
     .nav-logo {
+        width: 40%;
         display: flex;
         
     }
@@ -24,6 +22,7 @@
 
 
     .links {
+        width: 60%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -45,8 +44,14 @@
                 text-align: center;
             }
         }
+        .nav-logo {
+            width: 100%;
+            padding-bottom: 2rem;
+        }
         .links {
+            width: 100%;
             justify-content: space-evenly;
+
         }
     }
 }
