fixed height issue with nav buttons

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -57,7 +57,7 @@
 }
 
 a.nav-btn {
-      .button-mixin(auto, 160, 217, 118, 0.5, @feijoa, @nero, 1.5rem);
+      .button-mixin(30%, 160, 217, 118, 0.5, @feijoa, @nero, 1.5rem);
       word-wrap: none;
 }
 
