added bootstrap and other changes

--- a/less/about-page.less
+++ b/less/about-page.less
@@ -10,6 +10,9 @@
         }
         
         .dev {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             width: 30%;
             padding: 0 1rem;
 
@@ -24,6 +27,16 @@
 
             img {
                 border-radius: 10%;
+            }
+            
+            .git-username {
+                padding: 0 1rem;
+                font-size: 1.5rem;
+                font-family: @cabin;
+            }
+
+            a {
+                margin: 2rem;
             }
         }
     }
