--- a/css/index.css
+++ b/css/index.css
@@ -171,7 +171,7 @@ img {
   max-width: 100%;
   height: auto;
 }
-.container {
+.maxwidth {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
@@ -179,13 +179,6 @@ img {
 .navigation {
   display: flex;
   padding: 3% 0;
-}
-.navigation a {
-  text-decoration: none;
-  color: black;
-}
-.navigation a h1 {
-  font-weight: bold;
 }
 .navigation .nav-logo {
   width: 40%;
@@ -196,10 +189,6 @@ img {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-}
-.navigation .links a {
-  text-decoration: none;
-  color: black;
 }
 @media screen and (max-width: 500px) {
   .navigation {
@@ -476,6 +465,9 @@ a.nav-btn:hover {
   }
 }
 .about .role .dev {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 30%;
   padding: 0 1rem;
 }
@@ -491,6 +483,14 @@ a.nav-btn:hover {
 }
 .about .role .dev img {
   border-radius: 10%;
+}
+.about .role .dev .git-username {
+  padding: 0 1rem;
+  font-size: 1.5rem;
+  font-family: 'Cabin', sans-serif;
+}
+.about .role .dev a {
+  margin: 2rem;
 }
 body {
   -webkit-animation: fadein 2s;
