--- a/css/index.css
+++ b/css/index.css
@@ -226,94 +226,103 @@ a.nav-btn:hover {
   color: #A0D976;
   background: #1E1E1E;
 }
-.footer {
+footer {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
   border-top: 2px solid #278924;
   background: #FFFFFF;
 }
-.footer p {
+footer p {
   text-align: center;
   color: #1E1E1E;
   font-size: 1.6rem;
   padding: 20px;
 }
-.footer h2,
-.footer h4 {
+footer h2,
+footer h4 {
   text-align: center;
 }
-.footer .download {
+footer .download {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-bottom: 5rem;
 }
-.footer .download .ios-download {
+footer .download .ios-download {
   width: 30%;
   margin: 0.75rem;
 }
-.footer .download .android-download {
+footer .download .android-download {
   width: 30%;
   padding-right: 0.5rem;
 }
-.footer .awesome {
+footer .awesome {
   padding-top: 30px;
 }
-.footer .awesome h4 {
+footer .awesome h4 {
   margin-top: 5rem;
 }
-.footer .logo-links {
+footer .logo-links {
   display: flex;
 }
-.footer .logo-links .footer-logo {
+footer .logo-links .footer-logo {
   width: 50%;
 }
-.footer .logo-links .footer-logo .stacked-logo {
+footer .logo-links .footer-logo .stacked-logo {
   display: none;
 }
-.footer .logo-links .footer-logo img {
+footer .logo-links .footer-logo img {
   display: block;
   margin: 0 auto;
 }
-.footer .logo-links .links {
+footer .logo-links .reach-us {
+  font-size: 2rem;
   width: 50%;
+  text-align: center;
+  margin: auto;
+}
+footer .logo-links .reach-us address a {
+  color: black;
+}
+footer .links {
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-.footer .logo-links .links a {
+footer .links a {
   text-decoration: none;
 }
 @media screen and (max-width: 500px) {
-  .footer .download {
+  footer .download {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
   }
-  .footer .download .ios-download {
+  footer .download .ios-download {
     width: 60%;
     margin: 0.75rem;
   }
-  .footer .download .android-download {
+  footer .download .android-download {
     width: 60%;
     padding-right: 0.5rem;
   }
-  .footer .logo-links {
+  footer .logo-links {
     flex-direction: column;
     align-items: center;
   }
-  .footer .logo-links .footer-logo {
+  footer .logo-links .footer-logo {
     width: 100%;
   }
-  .footer .logo-links .footer-logo .horz-logo {
+  footer .logo-links .footer-logo .horz-logo {
     display: none;
   }
-  .footer .logo-links .footer-logo .stacked-logo {
+  footer .logo-links .footer-logo .stacked-logo {
     display: block;
     width: 50%;
   }
-  .footer .logo-links .links {
+  footer .logo-links .links {
     width: 100%;
   }
 }
@@ -339,7 +348,7 @@ a.nav-btn:hover {
   padding-left: 1%;
 }
 .home .content-section .img-content img {
-  border-radius: 10px;
+  border-radius: 20px;
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -365,6 +374,7 @@ a.nav-btn:hover {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  border-radius: 10px;
   color: #FFFFFF;
 }
 .home .get-started-today .content-destination-inner {
@@ -415,7 +425,7 @@ a.nav-btn:hover {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  border-radius: 5%;
+  border-radius: 20px;
   margin-bottom: 5rem;
 }
 .home .welcome-to-5th-wheel {
