--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,4 @@
-.footer {
+footer {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
@@ -56,9 +56,25 @@
        margin: 0 auto;
      }
    }
+
+   .reach-us {
+      font-size: 2rem;
+      width: 50%;
+      text-align: center;
+      margin: auto;
+      address {
+        a {
+          color: black;
+        }
+      }
+    
+   }
    
-   .links {
-        width: 50%;
+   
+  }
+
+  .links {
+        width: 100%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -67,7 +83,6 @@
             text-decoration: none;
             
         }
-    }
   }
 
   @media @mobile {
