--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,335 @@
-h1{
-    color: red;
+.main {
+  font-family: Arial, Helvetica, sans-serif;
+}
+@tablet (max-width: 800px);
+.navbar {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  margin: 2% auto;
+}
+@media (max-width: 500px) {
+  .navbar {
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  .navbar .logo {
+    padding-top: 3%;
+    padding-left: 45%;
+  }
+}
+.navbar .navlinks {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 55%;
+}
+@media (max-width: 500px) {
+  .navbar .navlinks {
+    flex-direction: column;
+    width: 100%;
+    padding-left: 29%;
+    padding-right: 29%;
+    padding-bottom: 3%;
+    font-size: 1.2rem;
+    border-bottom: 1px grey solid;
+  }
+}
+.navbar .navlinks #applink {
+  background-color: #104341;
+  color: #FFFFFF;
+}
+.navbar .navlinks a {
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 1.3rem;
+  padding: 8px 50px;
+  color: #104341;
+}
+.navbar .navlinks a:hover {
+  border: 1px #292a2f solid;
+}
+.support-div {
+  width: 20%;
+  margin: 3% 0;
+  margin-left: 13%;
+}
+@media (max-width: 500px) {
+  .support-div {
+    display: none;
+  }
+}
+.support-div .support-banner {
+  background: lightblue;
+  opacity: 0.7;
+  border-radius: 21px;
+  max-width: 50%;
+}
+.support-div .support-banner p {
+  padding: 3px;
+  display: flex;
+  align-items: center;
+}
+.support-div .support-banner p #new {
+  margin-right: 3px;
+  padding: 2px 3px;
+  font-size: 0.7rem;
+  border-radius: 21px;
+  background: #1E1E1E;
+  color: white;
+}
+.intro {
+  margin: 0% 10%;
+  width: 80% auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.intro .intro-text {
+  margin: 17% 0;
+  width: 45%;
+}
+@media (max-width: 500px) {
+  .intro .intro-text {
+    justify-content: center;
+    width: 100%;
+    padding: 0 5%;
+  }
+}
+.intro .intro-text #name {
+  color: #278924;
+}
+.intro .intro-text .intro-field {
+  width: 32%;
+  padding: 8px 10;
+  border-radius: 8px;
+  border: grey 1px solid;
+}
+.intro .intro-text .intro-btn {
+  background: #278924;
+  border: 1px #278924 solid;
+  color: #FFFFFF;
+  padding: 8px 10;
+  margin-right: 3px;
+  border-radius: 8px;
+}
+.intro .intro-text .intro-btn:hover {
+  background-color: #292a2f;
+  border: 1px #292a2f solid;
+}
+.intro .intro-img {
+  width: 35%;
+}
+@media (max-width: 500px) {
+  .intro .intro-img {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .intro {
+    width: 100%;
+  }
+}
+.trio-title {
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px black solid;
+  width: 30%;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 3%;
+}
+@media (max-width: 500px) {
+  .trio-title {
+    width: 100%;
+    padding-left: 29%;
+    padding-right: 29%;
+    padding-bottom: 3%;
+    font-size: 0.8rem;
+  }
+}
+.trio {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  margin-bottom: 5%;
+  width: 80%;
+}
+@media (max-width: 500px) {
+  .trio {
+    width: 100%;
+    padding-left: 18%;
+    padding-right: 18%;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+.trio .trio-boxes {
+  margin: 0% 2%;
+  width: 30%;
+  font-size: 1.3rem;
+}
+@media (max-width: 500px) {
+  .trio .trio-boxes {
+    width: 100%;
+    justify-content: center;
+    font-size: 1rem;
+    margin-bottom: 15%;
+  }
+}
+.trio img {
+  width: 440px;
+  height: 310px;
+}
+.banner {
+  width: 100%;
+  margin: 5% auto;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  .banner {
+    padding-top: 50px;
+    padding-bottom: 140px;
+    padding-right: 30%;
+    padding-left: 30%;
+    margin: 10% auto;
+    background: lightblue;
+    flex-direction: column;
+  }
+}
+.banner h2 {
+  position: absolute;
+  font-size: 1.8rem;
+  padding: 12% 40%;
+  text-align: center;
+  color: #FFFFFF;
+}
+@media (max-width: 500px) {
+  .banner h2 {
+    padding: 1%;
+    margin: 0;
+    width: 100%;
+  }
+}
+.banner p {
+  position: absolute;
+  font-size: 1.8rem;
+  padding: 15% 20%;
+  color: #FFFFFF;
+  text-align: center;
+}
+@media (max-width: 500px) {
+  .banner p {
+    display: none;
+  }
+}
+.banner a {
+  position: absolute;
+  font-size: 1.6rem;
+  margin: 26% 43%;
+  padding: 8px 26px;
+  border-radius: 5px;
+  color: #FFFFFF;
+  text-decoration: none;
+  border: 1px white solid;
+}
+@media (max-width: 500px) {
+  .banner a {
+    padding: 0;
+    margin: 15% 0;
+    text-align: center;
+    width: 100%;
+  }
+}
+.banner img {
+  z-index: -1;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+@media (max-width: 500px) {
+  .banner img {
+    display: none;
+  }
+}
+.app-display {
+  width: 80%;
+  margin: 5% auto;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .app-display {
+    flex-direction: column;
+    margin-left: 145px;
+  }
+}
+.app-display .app-text {
+  font-size: 1.5rem;
+  margin: 15% 0%;
+  width: 65%;
+}
+@media (max-width: 500px) {
+  .app-display .app-text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+.app-display .app-text h2 {
+  color: #175D31;
+}
+.app-display .app-img {
+  width: 35%;
+  position: relative;
+  margin: 0 auto;
+  align-content: flex-end;
+}
+@media (max-width: 500px) {
+  .app-display .app-img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+  margin-top: 15%;
+  margin-bottom: 5%;
+}
+@media (max-width: 500px) {
+  .footer {
+    flex-direction: column;
+    margin-left: 145px;
+    width: 100%;
+  }
+}
+.footer .footer-prima {
+  padding: 0 8px;
+  width: 70%;
+}
+.footer .footer-box {
+  display: flex;
+  flex-direction: column;
+}
+.footer .footer-box a {
+  text-decoration: none;
+}
+.footer .footer-box a:hover {
+  text-decoration: underline;
+}
+@media (max-width: 500px) {
+  .footer .footer-box {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
