--- a/css/index.css
+++ b/css/index.css
@@ -249,7 +249,7 @@
   z-index: -1;
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 85vh;
 }
 @media (max-width: 500px) {
   .banner img {
@@ -281,6 +281,9 @@
     justify-content: center;
   }
 }
+.app-display .app-text p {
+  width: 65%;
+}
 .app-display .app-text h2 {
   color: #175D31;
 }
@@ -299,11 +302,12 @@
 }
 .footer {
   display: flex;
-  justify-content: space-between;
-  width: 80%;
+  justify-content: space-evenly;
+  width: 100%;
   margin: auto;
-  margin-top: 15%;
-  margin-bottom: 5%;
+  padding-top: 6%;
+  padding-bottom: 5%;
+  background: #F3F2F2;
 }
 @media (max-width: 500px) {
   .footer {
@@ -313,21 +317,35 @@
   }
 }
 .footer .footer-prima {
-  padding: 0 8px;
-  width: 70%;
+  margin-left: 10%;
+  width: 90%;
 }
-.footer .footer-box {
+.footer .footer-prima p {
+  width: 60%;
+}
+.footer .footer-box-div {
+  margin-right: 30%;
+  display: flex;
+  flex-direction: row;
+}
+@media (max-width: 500px) {
+  .footer .footer-box-div {
+    width: 100%;
+  }
+}
+.footer .footer-box-div .footer-box {
+  padding: 0 15%;
   display: flex;
   flex-direction: column;
 }
-.footer .footer-box a {
+.footer .footer-box-div .footer-box a {
   text-decoration: none;
 }
-.footer .footer-box a:hover {
+.footer .footer-box-div .footer-box a:hover {
   text-decoration: underline;
 }
 @media (max-width: 500px) {
-  .footer .footer-box {
+  .footer .footer-box-div .footer-box {
     width: 100%;
     display: flex;
     justify-content: center;
