--- a/less/index.less
+++ b/less/index.less
@@ -254,7 +254,7 @@
         z-index: -1;
         position: relative;
         width: 100vw;
-        height: 100vh;
+        height: 85vh;
         @media @phone {
             display: none;
             
@@ -280,6 +280,9 @@
             justify-content: center;
 
         }
+        p{
+            width: 65%;
+        }
         h2{
             color: @crusoe;
         }
@@ -303,21 +306,34 @@
 
 .footer{
     display: flex;
-    justify-content: space-between;
-    width: 80%;
+    justify-content: space-evenly;
+    width: 100%;
     margin: auto;
-    margin-top: 15%; 
-    margin-bottom: 5%; 
+    padding-top: 6%; 
+    padding-bottom: 5%; 
+    background: #F3F2F2; 
     @media @phone {
         flex-direction: column;
         margin-left: 145px;
         width: 100%;
     }
+    
     .footer-prima{
-        padding: 0 8px; 
-        width: 70%;
+        margin-left: 10%;
+        width: 90%;
+        p{
+            width: 60%;
+        }
     }
+    .footer-box-div{
+        margin-right: 30%;
+        display: flex;
+        flex-direction: row;
+            @media @phone {
+                width: 100%;
+            }
     .footer-box{
+        padding: 0 15%;
         display: flex;
         flex-direction: column;
         a{
@@ -325,11 +341,6 @@
             &:hover{
                 text-decoration: underline;
             }
-        }
-        @media @phone {
-            width: 100%;
-            display: flex;
-            justify-content: center;
         }
 
 }
