--- a/less/home-page.less
+++ b/less/home-page.less
@@ -105,6 +105,7 @@
     background-position: center center;
     margin-bottom: 5rem;
     margin-top: 2rem;
+    border-radius: 10px;
 
     h2 {
       position: relative;
