--- a/less/index.less
+++ b/less/index.less
@@ -132,6 +132,9 @@
     }
     .intro-img{
         width: 35%;
+        img{
+        border-radius: 12px;
+    }
             @media @phone {
                 display: none;
             }
@@ -175,6 +178,7 @@
         margin: 0% 2%;
         width: 30%;
         font-size: 1.3rem;
+        
             @media @phone {
                 width: 100%;
                 justify-content: center;
@@ -184,6 +188,7 @@
     }
 
     img{
+        border-radius: 12px;
         width: 440px;
         height: 310px;
     }
@@ -345,3 +350,15 @@
 
 }
 }
+}
+
+
+// contact page
+    .contact-form{
+        display: flex;
+        flex-direction: column;
+    }
+
+// about page
+
+// signup page
