--- a/less/index.less
+++ b/less/index.less
@@ -327,7 +327,7 @@
         margin-left: 10%;
         width: 90%;
         p{
-            width: 60%;
+            width: 80%;
         }
     }
     .footer-box-div{
@@ -357,8 +357,12 @@
     .contact-form{
         display: flex;
         flex-direction: column;
+        margin: 0 auto;
+        div, h2{
+            margin: 2% auto;
+            width: 100%;
+        }
     }
 
 // about page
 
-// signup page
