--- a/css/index.css
+++ b/css/index.css
@@ -318,34 +318,36 @@
     flex-direction: column;
     margin-left: 145px;
     width: 100%;
+    background: #FFFFFF;
   }
 }
-.footer .footer-prima {
+.footer-prima {
   margin-left: 10%;
-  width: 90%;
+  width: 70%;
 }
-.footer .footer-prima p {
+.footer-prima p {
   width: 80%;
 }
-.footer .footer-box-div {
-  margin-right: 30%;
+.footer-box-div {
+  margin-right: 10%;
   display: flex;
   flex-direction: row;
 }
 @media (max-width: 500px) {
-  .footer .footer-box-div {
+  .footer-box-div {
     width: 100%;
   }
 }
-.footer .footer-box-div .footer-box {
-  padding: 0 15%;
+.footer-box-div .footer-box {
+  width: 30%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
 }
-.footer .footer-box-div .footer-box a {
+.footer-box-div .footer-box a {
   text-decoration: none;
 }
-.footer .footer-box-div .footer-box a:hover {
+.footer-box-div .footer-box a:hover {
   text-decoration: underline;
 }
 .contact-form {
@@ -357,4 +359,7 @@
 .contact-form h2 {
   margin: 2% auto;
   width: 100%;
+}
+.col-md-4 img {
+  border-radius: 50%;
 }
