--- a/less/index.less
+++ b/less/index.less
@@ -321,36 +321,40 @@
         flex-direction: column;
         margin-left: 145px;
         width: 100%;
+        background: #FFFFFF; 
     }
     
-    .footer-prima{
-        margin-left: 10%;
-        width: 90%;
-        p{
-            width: 80%;
-        }
     }
-    .footer-box-div{
-        margin-right: 30%;
+
+
+ .footer-prima{
+      margin-left: 10%;
+      width: 70%;
+       p{
+             width: 80%;
+        }
+   }
+   .footer-box-div{
+        margin-right: 10%;
         display: flex;
         flex-direction: row;
-            @media @phone {
-                width: 100%;
-            }
-    .footer-box{
-        padding: 0 15%;
-        display: flex;
-        flex-direction: column;
-        a{
-            text-decoration: none;
-            &:hover{
-                text-decoration: underline;
-            }
+        @media @phone {
+             width: 100%;
         }
+    .footer-box{
+        width: 30%;
+        padding: 20px;
+        display: flex;
+         flex-direction: column;
+       a{
+            text-decoration: none;
+          &:hover{
+               text-decoration: underline;
+          }
+      }
 
-}
-}
-}
+ }
+ }
 
 
 // contact page
@@ -366,3 +370,6 @@
 
 // about page
 
+.col-md-4 img{
+    border-radius: 50%;
+}
