--- a/less/index.less
+++ b/less/index.less
@@ -308,10 +308,10 @@
         @media @phone {
            
             padding: 0;
-            margin: 10% 0;
+            jmargi-bottom: 5%;
             text-align: center;
             width: 100%;
-    }
+                  }
             @media @tablet {
                 font-size: 1.1rem;
                 width: 22%;
@@ -333,7 +333,7 @@
         width: 100vw;
         height: 40vh;
     }
-       
+
     }
 }
 
